# fileorganizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testing.cpp
